Ensure filters don't overlap with zoom

--- a/app/styles/legend.less
+++ b/app/styles/legend.less
@@ -6,6 +6,7 @@
     left: 0;
     overflow-y: auto;
     padding: 25px;
+    padding-bottom: 100px;
     position: absolute;
     top: 0;
     width: 33.33%;
